--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
           $GithubReleaseMessage = @'
           ${{github.event.release.body}}
           '@
-          $GithubReleaseMessage = $GithubReleaseMessage.Replace("`n","\n").Replace("`"","\`"").Replace("**","*").Replace("  - ",">").Replace("- ","• ").Replace("###","").Replace("##","").Replace("```powershell","```").Replace("`r","")
+          $GithubReleaseMessage = $GithubReleaseMessage.Replace("`n","\n").Replace("`"","\`"").Replace("**","*").Replace("  - ",">").Replace("- ","• ").Replace("###","").Replace("##","").Replace("powershell","").Replace("`r","")
           "githubReleaseMessage=$GithubReleaseMessage" | Out-File -FilePath $env:GITHUB_OUTPUT -Append
   push_to_slack:
     needs: publish_to_gallery
